--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lokijs": "^1.5.12"
   },
   "devDependencies": {
+    "@types/lokijs": "^1.5.11",
     "@types/node": "^20.8.9",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
