--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mikro-orm-lokijs",
+  "name": "mikro-orm-in-memory",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,9 @@
   "license": "MIT",
   "peerDependencies": {
     "@mikro-orm/core": "^5.9.0",
-    "lokijs": "^1.5.12"
+    "mingo": "^6.4.8"
   },
   "devDependencies": {
-    "@types/lokijs": "^1.5.11",
     "@types/node": "^20.8.9",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
