--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "MIT",
   "peerDependencies": {
     "@mikro-orm/core": "^5.9.0",
+    "lodash.omit": "^4.5.0",
     "mingo": "^6.4.8"
   },
   "devDependencies": {
+    "@types/lodash.omit": "^4.5.8",
     "@types/node": "^20.8.9",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
