npm run build, npm run test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && npx tsc",
+    "test": "npm run build && node --test ./dist/test/test.js"
   },
   "author": "",
   "license": "MIT",
